Correct alignment of global search box

--- a/src/assets/styles/global/search.styl
+++ b/src/assets/styles/global/search.styl
@@ -21,7 +21,7 @@
   border 0
   border-radius $border-radius-large
   box-shadow inset 0 1px 4px #777
-  padding 12px 14px 9px
+  padding 10px 14px 9px
 
 // Button
 .global-search-button
@@ -32,7 +32,7 @@
   font-family $font-family-brand
   border 0
   border-radius $border-radius-large
-  margin-left -6px
+  margin-left -8px
   padding 9px 12px 10px
 
   &:hover
