--- a/src/style.css
+++ b/src/style.css
@@ -1405,7 +1405,7 @@ div.wpcf7 img.ajax-loader {
   border: 0;
   border-radius: 3px;
   box-shadow: inset 0 1px 4px #777;
-  padding: 12px 14px 9px;
+  padding: 10px 14px 9px;
 }
 
 .global-search-button {
@@ -1420,7 +1420,7 @@ div.wpcf7 img.ajax-loader {
   font-family: "stalin_oneregular", sans-serif;
   border: 0;
   border-radius: 3px;
-  margin-left: -6px;
+  margin-left: -8px;
   padding: 9px 12px 10px;
 }
 
